--- a/web_client/web/index.html
+++ b/web_client/web/index.html
@@ -15,12 +15,13 @@
 
     <!-- Replace the Bootstrap CSS with the
         Bootstrap-Dark Variant CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/css/bootstrap-blackbox.min.css" rel="stylesheet">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/css/bootstrap-blackbox.min.css" rel="stylesheet"> -->
     <!-- Bootstrap CSS -->
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
   
+    <link rel="stylesheet" href="bootstrap.css">
     <link rel="stylesheet" href="styles.css">
     <script defer src="main.dart.js"></script>
 </head>
@@ -35,9 +36,6 @@
   <!-- Required DarkMode JavaScript
   Also requires the `data-bs-color-scheme` attribute in either the HTML
   or the BODY tag -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/js/darkmode.min.js"></script>
-  <script>
-    window.darkmode = darkmode;
-  </script>
+  <script src="./packages/bootstrap_dart/dark_mode/darkmode.min.js"></script>
 </body>
 </html>
