--- a/index.html
+++ b/index.html
@@ -1,28 +1,21 @@
 <!DOCTYPE html>
 
-<html data-bs-color-scheme>
+<html>
 <head>
     <base href="/cidart/"></base>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="scaffolded-by" content="https://github.com/dart-lang/sdk">
-    <title>web_client</title>
+    <title>CIDart</title>
     
     <!-- The page supports both dark and light color schemes,
     and the page author prefers / default is light. -->
     <meta name="color-scheme" content="light dark">
 
-    <!-- Replace the Bootstrap CSS with the
-        Bootstrap-Dark Variant CSS -->
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/css/bootstrap-blackbox.min.css" rel="stylesheet"> -->
-    <!-- Bootstrap CSS -->
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
-    <!-- Bootstrap Icons -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
-  
     <link rel="stylesheet" href="bootstrap.css">
     <link rel="stylesheet" href="styles.css">
+
     <script defer src="main.dart.js"></script>
 </head>
 
@@ -31,11 +24,8 @@
   <div id="output"></div>
 
   <!-- Some Bootstrap components require JS: Popper.js and Bootstrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
-  <!-- Required DarkMode JavaScript
-  Also requires the `data-bs-color-scheme` attribute in either the HTML
-  or the BODY tag -->
+  <script src="./packages/bootstrap_dart/js/bootstrap.bundle.min.js"></script>
+  <!-- Required DarkMode JavaScript for toggle -->
   <script src="./packages/bootstrap_dart/dark_mode/darkmode.min.js"></script>
 </body>
 </html>
